force-app/main/default/objects/VisitTask__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>RESurvey__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visits__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Visit__c</columns>
        <columns>Survey__c</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSK-{0000}</displayFormat>
        <label>Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>