force-app/main/default/objects/VisitTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visit__c</columns>
    <columns>Survey__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>